--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,3 +1,34 @@
-imap jj <Esc>
-vmap > >gv
-vmap < <gv
+""" Map leader to space ---------------------
+let mapleader=" "
+
+""" Plugins ---------------------------------
+set commentary                                      " gcc to comment code
+set surround                                        " cs"' to change surround from " to '
+set easymotion                                      " <leader> f to move inside code easily
+
+""" Common settings -------------------------
+set scrolloff=5                                     " minimum number of lines above and below the cursor
+set ignorecase                                      " search case insensitive
+set incsearch                                       " go to matched search while typing
+set number                                          " print the line number in front of each line
+
+""" Mappings --------------------------------
+imap jj <Esc>                                       " jj to go to normal mode
+vmap > >gv                                          " to make indent selection not being removed after single indent
+vmap < <gv                                          " to make unindent selection not being removed after single indent
+
+map <leader>f <Plug>(easymotion-s)
+map <leader>e <Plug>(easymotion-f)
+
+map <leader>d <Action>(Debug)
+map <leader>r <Action>(RenameElement)
+map <leader>c <Action>(Stop)
+map <leader>z <Action>(ToggleDistractionFreeMode)
+
+map <leader>s <Action>(SelectInProjectView)
+map <leader>a <Action>(Annotate)
+map <leader>h <Action>(Vcs.ShowTabbedFileHistory)
+map <S-Space> <Action>(GotoNextError)
+
+map <leader>b <Action>(ToggleLineBreakpoint)
+map <leader>o <Action>(FileStructurePopup)
