--- a/.ideavimrc
+++ b/.ideavimrc
@@ -40,3 +40,4 @@ map <leader>v <Action>(EditorSelectWord)
 map <leader>w <Action>(HideAllWindows)
 map <leader>v <Action>(EditorSelectWord)
 map <leader>V <Action>(EditorUnSelectWord)
+map <leader>; <Action>(NextSplitter)
