--- a/nvchad/lua/custom/vsc_snippets/package.json
+++ b/nvchad/lua/custom/vsc_snippets/package.json
@@ -14,6 +14,10 @@
       {
         "language": "blade",
         "path": "./blade.json"
+      },
+      {
+        "language": "php",
+        "path": "./php.json"
       }
 		]
 	}
