--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "iterm2"]
 	path = iterm2
 	url = git@github.com:ahmedsayedabdelsalam/iterm2.git
+[submodule "alacritty/themes"]
+	path = alacritty/themes
+	url = https://github.com/alacritty/alacritty-theme.git
