--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,13 @@
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -g base-index 1
 
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
 unbind %
-bind | split-window -h
+bind | split-window -h 
 
 unbind '"'
 bind - split-window -v
@@ -13,10 +15,10 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
+bind j resize-pane -D 5
+bind k resize-pane -U 5
+bind l resize-pane -R 5
+bind h resize-pane -L 5
 
 bind -r m resize-pane -Z
 
@@ -24,21 +26,23 @@ set -g mouse on
 
 set-window-option -g mode-keys vi
 
-bind-key -T copy-mode-vi 'v' send -X bgin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
-unbind -T copy-mode-vi MouseDragEnd1Pane
+unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
-# tpm plugin (plugin manager)
+# remove delay for exiting insert mode with ESC in Neovim
+set -sg escape-time 10
+
+# tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically save sessions for you every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
-set -g @themepack 'powerline/default/cyan'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
