--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "plugins/zsh-autosuggestions"]
-	path = plugins/zsh-autosuggestions
-	url = https://github.com/zsh-users/zsh-autosuggestions
-[submodule "plugins/artisan"]
-	path = plugins/artisan
-	url = git@github.com:jessarcher/zsh-artisan.git
 [submodule "iterm2"]
 	path = iterm2
 	url = git@github.com:ahmedsayedabdelsalam/iterm2.git
@@ -13,3 +7,4 @@
 [submodule "tmux/.tmux/plugins/tpm"]
 	path = tmux/.tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+  ignore = untracked
