--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,6 +8,10 @@ import = [
 [ env ]
 TERM = "xterm-256color"
 
+# [shell]
+# program = "/opt/homebrew/bin/zellij"
+# args = ["-l", "welcome"]
+
 [window]
 startup_mode = "SimpleFullscreen"
 padding.x = 10
