--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "fzf/fzf-git.sh"]
 	path = fzf/fzf-git.sh
 	url = https://github.com/junegunn/fzf-git.sh.git
+[submodule "alacritty/catppuccin"]
+	path = alacritty/catppuccin
+	url = https://github.com/catppuccin/alacritty.git
