--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,9 @@ set-window-option -g mode-keys vi
 
 
 set-option -g status-position top
+# set-option -g status-style bg=default
+# set -g status-bg default
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
@@ -47,6 +50,7 @@ set -g @plugin 'omerxx/tmux-floax'
 set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'catppuccin/tmux'
 
+set -g @catppuccin_status_background "default"
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_middle_separator " █"
