--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,7 @@ bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 5
 bind h resize-pane -L 5
+bind-key = command-prompt -p "Enter size (in %):" "resize-pane -x '%%'"
 
 bind -r m resize-pane -Z
 
