--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,21 +1,24 @@
-font_family JetBrainsMono Nerd Font Mono Regular
-bold_font JetBrainsMono Nerd Font Mono Bold
-italic_font JetBrainsMono Nerd Font Mono Italic
-bold_italic_font JetBrainsMono Nerd Font Mono Bold Italic
+# to reload the config (⌃ + ⌘ + ,)
+
+font_family JetBrainsMono Nerd Font Mono
+bold_font auto
+italic_font auto
+bold_italic_font auto
 
 font_size 13
-modify_font cell_height 180%
-modify_font strikethrough_position 150%
 
-cursor_blink_interval 0
-window_padding_width 10
-hide_window_decorations yes
-wayland_titlebar_color background
-remember_window_size yes
-initial_window_width 1680
-initial_window_height 1200
+background_opacity 0.85
+background_blur 10
+
+shell_integration no-cursor
+cursor_blink_interval 0.0
+window_padding_width 5
+hide_window_decorations titlebar-only
 enable_audio_bell no
 
 # BEGIN_KITTY_THEME
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
+startup_session ~/.config/kitty/sessions/max.conf
