--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -40,6 +40,11 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging wi
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
 
+# To enable Yazi's image preview to work correctly in tmux
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
 
