fix aerospace config file name

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -183,5 +183,5 @@ if.app-id = 'com.github.wez.wezterm'
 run = "move-node-to-workspace T"
 
 [[on-window-detected]]
-if.app-id = 'com.google.Chrome'
+if.app-id = 'company.thebrowser.Browser'
 run = "move-node-to-workspace B"
