--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -12,7 +12,9 @@ after-login-command = []
 # You can use it to add commands that run after AeroSpace startup.
 # 'after-startup-command' is run after 'after-login-command'
 # Available commands : https://nikitabobko.github.io/AeroSpace/commands
-after-startup-command = []
+after-startup-command = [
+  'workspace 1', 'layout accordion', 'workspace-back-and-forth',
+]
 
 # Start AeroSpace at login
 start-at-login = true
@@ -165,7 +167,19 @@ alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
 
 [[on-window-detected]]
+if.app-id = 'com.tinyspeck.slackmacgap'
+run = "move-node-to-workspace 1"
+
+[[on-window-detected]]
+if.app-id = 'com.apple.finder'
+run = "move-node-to-workspace 1"
+
+[[on-window-detected]]
 if.app-id = 'com.github.wez.wezterm'
+run = "move-node-to-workspace 3"
+
+[[on-window-detected]]
+if.app-id = 'com.googlecode.iterm2'
 run = "move-node-to-workspace 3"
 
 [[on-window-detected]]
