--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -174,6 +174,16 @@ run = "move-node-to-workspace 1"
 if.app-id = 'com.apple.finder'
 run = "move-node-to-workspace 1"
 
+
+[[on-window-detected]]
+if.app-id = 'company.thebrowser.Browser'
+run = "move-node-to-workspace 2"
+
+[[on-window-detected]]
+if.app-id = 'com.apple.Safari'
+run = "move-node-to-workspace 2"
+
+
 [[on-window-detected]]
 if.app-id = 'com.github.wez.wezterm'
 run = "move-node-to-workspace 3"
@@ -181,7 +191,3 @@ run = "move-node-to-workspace 3"
 [[on-window-detected]]
 if.app-id = 'com.googlecode.iterm2'
 run = "move-node-to-workspace 3"
-
-[[on-window-detected]]
-if.app-id = 'company.thebrowser.Browser'
-run = "move-node-to-workspace 2"
