--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -171,6 +171,10 @@ if.app-id = 'com.tinyspeck.slackmacgap'
 run = "move-node-to-workspace 1"
 
 [[on-window-detected]]
+if.app-id = 'net.whatsapp.WhatsApp'
+run = "move-node-to-workspace 1"
+
+[[on-window-detected]]
 if.app-id = 'com.apple.finder'
 run = "move-node-to-workspace 1"
 
