--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,22 @@ bind l resize-pane -R 5
 bind h resize-pane -L 5
 bind-key = command-prompt -p "Enter size (in %):" "resize-pane -x '%%'"
 
+# sesh
+bind-key "O" run-shell "sesh connect \"$(
+	sesh list | fzf-tmux -p 55%,60% \
+		--no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+		--header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+		--bind 'tab:down,btab:up' \
+		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
+		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
+		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
+)\""
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
+
 bind -r m resize-pane -Z
 
 set -g mouse on
@@ -53,7 +69,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'omerxx/tmux-floax'
-set -g @plugin 'omerxx/tmux-sessionx'
+# set -g @plugin 'omerxx/tmux-sessionx' # used sesh instead
 set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_status_background "default"
