--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,10 +1,63 @@
-""" Map leader to space ---------------------
-let mapleader=";"
+" .ideavimrc is a configuration file for IdeaVim plugin. It uses
+"   the same commands as the original .vimrc configuration.
+" You can find a list of commands here: https://jb.gg/h38q75
+" Find more examples here: https://jb.gg/share-ideavimrc
 
-""" Plugins ---------------------------------
-set commentary                                      " gcc to comment code
-set surround                                        " cs"' to change surround from " to '
-set easymotion                                      " <leader> f to move inside code easily
+
+"" -- Suggested options --
+" Show a few lines of context around the cursor. Note that this makes the
+" text scroll if you mouse-click near the start or end of the window.
+set scrolloff=5
+
+" Do incremental searching.
+set incsearch
+
+" Don't use Ex mode, use Q for formatting.
+map Q gq
+
+" --- Enable IdeaVim plugins https://jb.gg/ideavim-plugins
+
+" Highlight copied text
+Plug 'machakann/vim-highlightedyank'
+" Commentary plugin
+Plug 'tpope/vim-commentary'
+
+
+"" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
+"" Map \r to the Reformat Code action
+"map \r <Action>(ReformatCode)
+
+"" Map <leader>d to start debug
+"map <leader>d <Action>(Debug)
+
+"" Map \b to toggle the breakpoint on the current line
+"map \b <Action>(ToggleLineBreakpoint)
+
+
+
+
+
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
+
+
+
+
+
+
+""" Plugins  --------------------------------
+set which-key
+set notimeout
+set NERDTree
+set commentary
+set surround
+
 
 """ Common settings -------------------------
 set scrolloff=5                                     " minimum number of lines above and below the cursor
@@ -12,32 +65,30 @@ set ignorecase                                      " search case insensitive
 set incsearch                                       " go to matched search while typing
 set number                                          " print the line number in front of each line
 
-""" Mappings --------------------------------
-imap jj <Esc>
-" keep indenting
+
+""" Map leader to space ---------------------
+let mapleader = " "
+
+""" keep indenting ---------------------
 vmap > >gv
 vmap < <gv
 
-map <leader>f <Plug>(easymotion-s)
-map <leader>e <Plug>(easymotion-f)
+inoremap jj <Esc>
 
-map <leader>d <Action>(Debug)
-map <leader>r <Action>(RenameElement)
-map <leader>c <Action>(Stop)
-map <leader>z <Action>(ToggleDistractionFreeMode)
 
-map <leader>s <Action>(SelectInProjectView)
-map <leader>a <Action>(Annotate)
-map <leader>h <Action>(Vcs.ShowTabbedFileHistory)
-map <S-Space> <Action>(GotoNextError)
+nmap <leader>ff <Action>(GotoFile)
+nmap <leader><leader> <Action>(GotoFile)
+nmap <leader>fd <Action>(FindInPath)
+nmap <leader>fr <Action>(RecentFiles)
 
-map <leader>b <Action>(ToggleLineBreakpoint)
-map <leader>o <Action>(FileStructurePopup)
+nmap <leader>bd <Action>(CloseContent)
+nmap <leader>bo <Action>(CloseAllEditorsButActive)
 
-map <leader>r <Action>(Refactorings.QuickListPopupAction)
-map <leader>v <Action>(EditorSelectWord)
+nmap <leader>db <Action>(ToggleLineBreakpoint)
+nmap <leader>dc <Action>(Debug)
+nmap <leader>dt <Action>(Stop)
 
-map <leader>w <Action>(HideAllWindows)
-map <leader>v <Action>(EditorSelectWord)
-map <leader>V <Action>(EditorUnSelectWord)
-map <leader>; <Action>(NextSplitter)
+map <leader>e :NERDTreeToggle<CR>
+
+nmap L <Action>(NextTab)
+nmap H <Action>(PreviousTab)
