--- a/yazi/package.toml
+++ b/yazi/package.toml
@@ -1,5 +1,5 @@
 [plugin]
-deps = [{ use = "yazi-rs/plugins#full-border", commit = "06e5fe1" }]
+deps = [{ use = "yazi-rs/plugins#full-border", commit = "06e5fe1" }, { use = "yazi-rs/plugins:full-border", rev = "71c4fc2" }]
 
 [flavor]
 deps = []
