--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,6 +50,8 @@ set-option -g status-position top
 # set-option -g status-style bg=default
 # set -g status-bg default
 
+set -g @catppuccin_window_status_style "rounded"
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
@@ -67,14 +69,15 @@ set -ga update-environment TERM_PROGRAM
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
+set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'omerxx/tmux-floax'
 # set -g @plugin 'omerxx/tmux-sessionx' # used sesh instead
 
-# Color Scheme
-source-file ~/.tmux/color-scheme.conf
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
@@ -83,3 +86,5 @@ set -g @tpm-clean 'u'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g status-style bg=default
