--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,6 @@ bind j resize-pane -D 5
 bind k resize-pane -U 5
 bind l resize-pane -R 5
 bind h resize-pane -L 5
-bind-key = command-prompt -p "Enter size (in %):" "resize-pane -x '%%'"
 
 # sesh
 bind-key "O" run-shell "sesh connect \"$(
@@ -73,7 +72,7 @@ set -g @plugin 'catppuccin/tmux#v2.1.2'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
-set -g @plugin 'omerxx/tmux-floax'
+# set -g @plugin 'omerxx/tmux-floax'
 # set -g @plugin 'omerxx/tmux-sessionx' # used sesh instead
 
 set -g status-left ""
