--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,12 +1,3 @@
-import = [
-  # alacritty themes
-  # "~/.config/alacritty/themes/themes/coolnight.toml",
-  # catppuccin themes
-  # "~/.config/alacritty/catppuccin/catppuccin-mocha.toml",
-  # custom theme
-  "~/.config/alacritty/custom/themes/coolnight.toml",
-]
-
 [ env ]
 TERM = "xterm-256color"
 
@@ -30,3 +21,13 @@ option_as_alt = "Both"
 normal.family = "MesloLGS Nerd Font Mono"
 
 size = 14
+
+[general]
+import = [
+  # alacritty themes
+  # "~/.config/alacritty/themes/themes/coolnight.toml",
+  # catppuccin themes
+  # "~/.config/alacritty/catppuccin/catppuccin-mocha.toml",
+  # custom theme
+  "~/.config/alacritty/custom/themes/coolnight.toml",
+]
