--- a/ghostty/config
+++ b/ghostty/config
@@ -11,3 +11,8 @@ font-size = 13
 
 window-width = 1000
 window-height = 1000
+
+macos-option-as-alt = left
+
+keybind = alt+left=unbind
+keybind = alt+right=unbind
