--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,13 +68,13 @@ set -ga update-environment TERM_PROGRAM
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
-set -g @plugin 'catppuccin/tmux#v2.1.2'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'omerxx/tmux-floax'
 # set -g @plugin 'omerxx/tmux-sessionx' # used sesh instead
 
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application} #{E:@catppuccin_status_session}"
+set -g status-right "#{E:@catppuccin_status_session}"
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
