--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,9 +70,12 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'omerxx/tmux-floax'
 # set -g @plugin 'omerxx/tmux-sessionx' # used sesh instead
 
+set -g @catppuccin_window_text " #W"
+set -g @catppuccin_window_current_text " #W"
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_session}"
 
@@ -87,3 +90,4 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 run '~/.tmux/plugins/tpm/tpm'
 
 set -g status-style bg=default
+set -g popup-style bg=default
