--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -102,11 +102,12 @@ set -g @plugin 'tmux-plugins/tpm'                  # Plugin manager
 set -g @plugin 'catppuccin/tmux#v2.1.3'            # Theme
 set -g @plugin 'christoomey/vim-tmux-navigator'    # Vim integration
 set -g @plugin 'tmux-plugins/tmux-sensible'        # Sensible defaults
+set -g @plugin 'omerxx/tmux-floax'                 # Floating terminal
 set -g @plugin 'tmux-plugins/tmux-resurrect'       # Session saving
 set -g @plugin 'tmux-plugins/tmux-continuum'       # Auto session save
 
 # Plugin options
-set -g @resurrect-capture-pane-contents 'on'       # Save pane contents
+# set -g @resurrect-capture-pane-contents 'on'       # Save pane contents
 set -g @continuum-restore 'on'                     # Auto restore sessions
 set -g @tpm-clean 'u'                              # Clean plugins with prefix + u
 
