--- a/yazi/package.toml
+++ b/yazi/package.toml
@@ -1,5 +1,9 @@
-[plugin]
-deps = [{ use = "yazi-rs/plugins#full-border", commit = "06e5fe1" }, { use = "yazi-rs/plugins:full-border", rev = "71c4fc2" }]
+[[plugin.deps]]
+use = "yazi-rs/plugins:full-border"
+rev = "d7588f6"
+hash = "3996fc74044bc44144b323686f887e1"
 
-[flavor]
-deps = []
+[[flavor.deps]]
+use = "yazi-rs/flavors:catppuccin-mocha"
+rev = "3e6da98"
+hash = "deff42490f77b222e9d3a84dc16a76c5"
