--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,9 +57,9 @@ bind-key x kill-pane
 # Copy Mode Configuration
 # -----------------------------------------------------------------------------
 # Vim-like copy mode
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
-unbind -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi 'v' send -X begin-selection 
+bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # -----------------------------------------------------------------------------
 # Status Bar & Theme Configuration
