--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -227,6 +227,9 @@ automatically-unhide-macos-hidden-apps = false
 [[on-window-detected]]
     if.app-id = 'com.apple.mail'
     run = 'layout floating'
+[[on-window-detected]]
+    if.app-id = 'com.apple.iCal'
+    run = 'layout floating'
 [[on-window-detected]] # (default) make me last
     # no filter = applies to any app not matched above
     run = 'move-node-to-workspace 1'
