--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,3 +1,20 @@
 git:
   parseEmoji: true
 
+# https://github.com/jesseduffield/lazygit/issues/1307#issuecomment-2237348643
+customCommands:
+- command: git commit -m '{{ .Form.emoji }} {{ .Form.message }}'
+  context: files
+  description: Commit changes using gitmojis
+  key: C
+  prompts:
+  - command: gitmoji -l
+    filter: ^(.*?) - (:.*?:) - (.*)$
+    key: emoji
+    labelFormat: '{{ .group_1 }} - {{ .group_3 }}'
+    title: 'Select a gitmoji:'
+    type: menuFromCommand
+    valueFormat: '{{ .group_2 }}'
+  - key: message
+    title: 'Enter a commit message:'
+    type: input
