--- a/ghostty/config
+++ b/ghostty/config
@@ -1,6 +1,6 @@
 # to reload config cmd+shift+,
 
-theme = catppuccin-mocha
+theme = Catppuccin Mocha
 background = #000000
 background-opacity = 0.8
 background-blur = true
