--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -78,10 +78,8 @@ set -g status-right "#{E:@catppuccin_status_session}"
 # Session Management (Sesh Integration)
 # -----------------------------------------------------------------------------
 bind-key "O" run-shell "sesh connect \"$(
-    sesh list --icons | fzf-tmux -p 80%,70% \
-    --no-sort --ansi \
-    --border-label ' sesh ' \
-    --prompt '⚡  ' \
+  sesh list --icons | fzf-tmux -p 80%,70% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
@@ -91,7 +89,7 @@ bind-key "O" run-shell "sesh connect \"$(
     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
     --preview-window 'right:55%' \
-    --preview 'sesh preview {}' \
+    --preview 'sesh preview {}'
 )\""
 
 # -----------------------------------------------------------------------------
