--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -219,6 +219,9 @@ automatically-unhide-macos-hidden-apps = false
     if.app-id = 'com.mitchellh.ghostty'
     run = 'move-node-to-workspace 3'
 [[on-window-detected]]
+    if.app-id = 'com.microsoft.VSCode'
+    run = 'move-node-to-workspace 3'
+[[on-window-detected]]
     if.app-id = 'company.thebrowser.Browser'
     run = 'move-node-to-workspace 2'
 [[on-window-detected]]
